--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a>
+      <a class="navbar-brand js-scroll" href="#page-top">MASHRUR CHOWDHURY</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -72,7 +72,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hi, I'm Mashrur Chowdhury</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Lead Developer at BRDGE, Machine Learning Enthusiast, Aspiring Data Scientist, Graphic Designer, Digital Marketing</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p>
         </div>
       </div>
     </div>
@@ -94,33 +94,38 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                      <p><span class="title-s">Name: </span> <span>Mashrur Chowdhury</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Software Developer</span></p>
+                      <p><span class="title-s">Email: </span> <span>mashrurc02@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(647)-904-5505</span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <span>PYTHON</span> <span class="pull-right">90%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <span>JAVA</span> <span class="pull-right">65%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <span>HTML</span> <span class="pull-right">90%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>FLUTTER</span> <span class="pull-right">50%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <span>KERAS</span> <span class="pull-right">60%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -133,20 +138,18 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
+                    Hey there! My name's Mashrur Chowdhury and I'm currently a first-year student at the University of
+                    Waterloo. I have a keen interest in Data Science and Machine Learning and as such, am skilled in 
+                    many lanuages and libaries. 
                   </p>
                   <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                    Python is my most proficient language, where I have studied and dealt with Machine Learning the most,
+                    and second is Java. Take a look through my GitHub to see some of the projects I have completed using
+                    my skills.
                   </p>
                   <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                    If there are any questions or inquiries, please do not hesitate to contact me by email at mashrurc02@gmail.com
+                    or by phone at (647)-905-5505. Thanks for checking out my portfolio.
                   </p>
                 </div>
               </div>
@@ -182,9 +185,8 @@
             <div class="service-content">
               <h2 class="s-title">Web Design</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Experienced in front-end and back-end development of websites
+                with PHP, MongoDB, Python and Ruby.
               </p>
             </div>
           </div>
@@ -197,9 +199,7 @@
             <div class="service-content">
               <h2 class="s-title">Web Development</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Experience in creating responsive, fluid webpges using HTML, CSS and JS.
               </p>
             </div>
           </div>
@@ -212,9 +212,7 @@
             <div class="service-content">
               <h2 class="s-title">Photography</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Amateur photographer in nature, and skilled in Photoshop.
               </p>
             </div>
           </div>
@@ -225,11 +223,10 @@
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Responsive Design</h2>
+              <h2 class="s-title">Mobile Development</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Intermediate knowledge and expertise in Flutter SDK using Dart 
+                for cross-platform mobile applications using one codebase.
               </p>
             </div>
           </div>
@@ -242,9 +239,8 @@
             <div class="service-content">
               <h2 class="s-title">Graphic Design</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Photoshop expertise in making logos, business cards and any
+                other business related graphics.
               </p>
             </div>
           </div>
@@ -257,9 +253,8 @@
             <div class="service-content">
               <h2 class="s-title">Marketing Services</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Multipls social media growth marketing pages with a cumulative
+                following of over 5 000 users.
               </p>
             </div>
           </div>
