--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Services</a>
+            <a class="nav-link js-scroll" href="#service">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Work</a>
@@ -167,10 +167,10 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Services
+              Skills
             </h3>
             <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Take a look at some of the top skills I can provide.
             </p>
             <div class="line-mf"></div>
           </div>
@@ -186,7 +186,7 @@
               <h2 class="s-title">Web Design</h2>
               <p class="s-description text-center">
                 Experienced in front-end and back-end development of websites
-                with PHP, MongoDB, Python and Ruby.
+                with PHP, MongoDB, Python and Flask.
               </p>
             </div>
           </div>
@@ -212,7 +212,7 @@
             <div class="service-content">
               <h2 class="s-title">Photography</h2>
               <p class="s-description text-center">
-                Amateur photographer in nature, and skilled in Photoshop.
+                Amateur nature and city photographer, also skilled in Photoshop for editing.
               </p>
             </div>
           </div>
@@ -253,8 +253,8 @@
             <div class="service-content">
               <h2 class="s-title">Marketing Services</h2>
               <p class="s-description text-center">
-                Multipls social media growth marketing pages with a cumulative
-                following of over 5 000 users.
+                Multiple social media growth marketing pages with a cumulative
+                following of over 5000 users.
               </p>
             </div>
           </div>
@@ -357,7 +357,7 @@
           <div class="work-box">
             <a href="img/work-4.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
+                <img src="img/nfc.jpg" alt="" class="img-fluid" width="500" height="800">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -381,7 +381,7 @@
           <div class="work-box">
             <a href="img/work-5.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-5.jpg" alt="" class="img-fluid">
+                <img src="img/opencv.png" alt="" class="img-fluid" width="370" height="500">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -405,7 +405,7 @@
           <div class="work-box">
             <a href="img/work-6.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
+                <img src="img/db.jpg" alt="" class="img-fluid" width="500" height="800">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -429,7 +429,7 @@
           <div class="work-box">
             <a href="img/work-6.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
+                <img src="img/system.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -453,7 +453,7 @@
           <div class="work-box">
             <a href="img/work-6.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
+                <img src="img/pong.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -477,7 +477,7 @@
           <div class="work-box">
             <a href="img/work-6.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
+                <img src="img/fraud.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -512,7 +512,7 @@
               Blog
             </h3>
             <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Read some of my blog posts below.
             </p>
             <div class="line-mf"></div>
           </div>
@@ -681,7 +681,7 @@
                       as possible.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 1336 QUINPOOL COURT, MISSISSAUGA, ON, L5C4J3 </li>
+                      <li><span class="ion-ios-location"></span> MISSISSAUGA, ON</li>
                       <li><span class="ion-ios-telephone"></span> (647) 904-5505</li>
                       <li><span class="ion-email"></span> mashrurc02@gmail.com</li>
                     </ul>
