--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-green.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
