--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             <div class="service-content">
               <h2 class="s-title">Web Design</h2>
               <p class="s-description text-center">
-                Experienced in front-end and back-end development of websites
-                with PHP, MongoDB, Python and Flask.
+                Experienced in front-end development of websites
+                with HTML, CSS and JavaScript.
               </p>
             </div>
           </div>
@@ -199,20 +199,7 @@
             <div class="service-content">
               <h2 class="s-title">Web Development</h2>
               <p class="s-description text-center">
-                Experience in creating responsive, fluid webpges using HTML, CSS and JS.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Photography</h2>
-              <p class="s-description text-center">
-                Amateur nature and city photographer, also skilled in Photoshop for editing.
+                Experienced in web back-end using Python, PHP, MongoDB for databasing and Flask web framework.
               </p>
             </div>
           </div>
@@ -225,13 +212,13 @@
             <div class="service-content">
               <h2 class="s-title">Mobile Development</h2>
               <p class="s-description text-center">
-                Intermediate knowledge and expertise in Flutter SDK using Dart 
-                for cross-platform mobile applications using one codebase.
+                Expertise in Flutter SDK using Dart 
+                for cross-platform mobile applications using a singular codebase.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="ion-paintbrush"></i></span>
@@ -257,7 +244,7 @@
                 following of over 5000 users.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -283,7 +270,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/ML-Summarizer">
               <div class="work-img">
                 <img src="img/project1.jpg" href="https://github.com/MashyC/ML-Summarizer" alt="" class="img-fluid">
               </div>
@@ -307,7 +294,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/HtoO">
               <div class="work-img">
                 <img src="img/project2.png" alt="" class="img-fluid">
               </div>
@@ -331,7 +318,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/Convolutional-Neural-Networks">
               <div class="work-img">
                 <img src="img/project3.jpg" alt="" class="img-fluid">
               </div>
@@ -355,7 +342,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/HandShake">
               <div class="work-img">
                 <img src="img/nfc.jpg" alt="" class="img-fluid" width="500" height="800">
               </div>
@@ -379,7 +366,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-5.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/OpenCV">
               <div class="work-img">
                 <img src="img/opencv.png" alt="" class="img-fluid" width="370" height="500">
               </div>
@@ -403,7 +390,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/Employee-Managment-System">
               <div class="work-img">
                 <img src="img/db.jpg" alt="" class="img-fluid" width="500" height="800">
               </div>
@@ -427,7 +414,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/Boltzmann-Machine">
               <div class="work-img">
                 <img src="img/system.png" alt="" class="img-fluid">
               </div>
@@ -451,7 +438,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/Pure-HTML-Pong">
               <div class="work-img">
                 <img src="img/pong.jpg" alt="" class="img-fluid">
               </div>
@@ -475,7 +462,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/MashyC/Self-Organizing-Maps">
               <div class="work-img">
                 <img src="img/fraud.png" alt="" class="img-fluid">
               </div>
