--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
+<!-- MASHRUR CHOWDHURY PORTFOLIO -->
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Mashrur Chowdhury</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
-  <meta content="" name="description">
+
+  <!-- LinkedIn Scraping -->
+  <meta name="image" property="og:image" content="img/bg6.png">
+  <meta name="author" content="Mashrur Chowdhury">
+  <meta name="description" property="og:description" content="Hi, my name's Mashrur Chowdhury and I'm currently a first-year student at the University of Waterloo. Browse my portfolio and learn about some of the project's I've been working on!">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -71,14 +77,13 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hi, I'm Mashrur Chowdhury</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Lead Developer at BRDGE, Machine Learning Enthusiast, Aspiring Data Scientist, Graphic Designer, Digital Marketer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Full-Stack Developer, Mobile App Developer, Aspiring Data Scientist, Machine Learning Enthusiast, Digital Marketer, Lead Developer at BRDGE</span><strong class="text-slider"></strong></p>
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p>
         </div>
       </div>
     </div>
   </div>
   <!--/ Intro Skew End /-->
-
   <section id="about" class="about-mf sect-pt4 route">  
     <div class="container">
       <div class="row">
@@ -517,7 +522,7 @@
                   <h6 class="category">Travel</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">Coming Soon</a></h3>
+              <h3 class="card-title">Coming Soon</h3>
               <p class="card-description">
                 Travel blog coming soon...
               </p>
@@ -546,7 +551,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">Coming Soon</a></h3>
+              <h3 class="card-title">Coming Soon></h3>
               <p class="card-description">
                 Web Design blog coming soon...
               </p>
@@ -575,7 +580,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">Coming Soon</a></h3>
+              <h3 class="card-title">Coming Soon</h3>
               <p class="card-description">
                 Web Design blog coming soon...
               </p>
