--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- LinkedIn Scraping -->
-  <meta name="image" property="og:image" content="img/bg6.png">
+  <meta name="title" property="og:title" content="Hi, I'm Mashrur Chowdhury!">
+  <meta name="image" property="og:image" content="img/linkedin.gif">
   <meta name="author" content="Mashrur Chowdhury">
   <meta name="description" property="og:description" content="Hi, my name's Mashrur Chowdhury and I'm currently a first-year student at the University of Waterloo. Browse my portfolio and learn about some of the project's I've been working on!">
 
