--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="description" property="og:description" content="Hi, my name's Mashrur Chowdhury and I'm currently a first-year student at the University of Waterloo. Browse my portfolio and learn about some of the project's I've been working on!">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/siteLogo.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
@@ -34,10 +34,10 @@
 
 <body id="page-top">
 
-  <!--/ Nav Star /-->
+  <!-- Start of Nav Bar-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">MASHRUR CHOWDHURY</a>
+      <a class="navbar-brand js-scroll" href="#page-top"><img src="img/navLogo.png" height="120" width="230"/></a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -68,15 +68,13 @@
       </div>
     </div>
   </nav>
-  <!--/ Nav End /-->
+  <!-- End of Nav Bar -->
 
-  <!--/ Intro Skew Star /-->
   <div id="home" class="intro route bg-image" style="background-image: url(img/bg6.png)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hi, I'm Mashrur Chowdhury</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Full-Stack Developer, Mobile App Developer, Aspiring Data Scientist, Machine Learning Enthusiast, Digital Marketer, Lead Developer at BRDGE</span><strong class="text-slider"></strong></p>
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p>
@@ -84,7 +82,7 @@
       </div>
     </div>
   </div>
-  <!--/ Intro Skew End /-->
+
   <section id="about" class="about-mf sect-pt4 route">  
     <div class="container">
       <div class="row">
@@ -108,20 +106,30 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>Python</span> <span class="pull-right">90%</span>
+                  <p class="title-s">Skills</p>
+                  <span>Python</span> <span class="pull-right">100%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Java</span> <span class="pull-right">65%</span>
+                  <span>Java</span> <span class="pull-right">75%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>HTML</span> <span class="pull-right">90%</span>
+                  <span>C++</span> <span class="pull-right">60%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>HTML/CSS</span> <span class="pull-right">90%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>React.js</span> <span class="pull-right">45%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>Flutter</span> <span class="pull-right">50%</span>
@@ -166,7 +174,7 @@
     </div>
   </section>
 
-  <!--/ Section Services Star /-->
+  <!-- Skills Section Start -->
   <section id="service" class="services-mf route">
     <div class="container">
       <div class="row">
@@ -255,9 +263,9 @@
       </div>
     </div>
   </section>
-  <!--/ Section Services End /-->
+  <!-- Skill Section End -->
 
-  <!--/ Section Portfolio Star /-->
+  <!-- Portfolio Preview Start -->
   <section id="work" class="portfolio-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -333,7 +341,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">CNN Image Classifier</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Machine Learning</span> / <span class="w-date">7 Feb. 2020</span>
+                      <span class="w-ctegory">Machine Learning (Python)</span> / <span class="w-date">7 Feb. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -357,7 +365,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Handshake</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Flutter App</span> / <span class="w-date">5 Dec. 2019</span>
+                      <span class="w-ctegory">Java</span> / <span class="w-date">5 Dec. 2019</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -381,7 +389,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Computer Vision Demo</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python</span> / <span class="w-date">4 May. 2019</span>
+                      <span class="w-ctegory">OpenCV (Python)</span> / <span class="w-date">4 May. 2019</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -429,7 +437,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Recommendation System and Rating Prediction</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Machine Learning</span> / <span class="w-date">25 Jan. 2019</span>
+                      <span class="w-ctegory">Machine Learning (Python)</span> / <span class="w-date">25 Jan. 2019</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -453,7 +461,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">HTML Pong</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">HTML/JS</span> / <span class="w-date">17 Sep. 2018</span>
+                      <span class="w-ctegory">HTML/CSS/JS</span> / <span class="w-date">17 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -477,7 +485,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Fraud Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Machine Learning</span> / <span class="w-date">24 July. 2018</span>
+                      <span class="w-ctegory">Machine Learning (Python)</span> / <span class="w-date">24 July. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -493,9 +501,9 @@
       </div>
     </div>
   </section>
-  <!--/ Section Portfolio End /-->
+  <!-- Portfolio Preview End -->
 
-  <!--/ Section Blog Star /-->
+  <!-- Blog Start -->
   <section id="blog" class="blog-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -602,9 +610,9 @@
       </div>
     </div>
   </section>
-  <!--/ Section Blog End /-->
+  <!-- Blog End -->
 
-  <!--/ Section Contact-Footer Star /-->
+  <!-- Contact Footer Start-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -700,7 +708,7 @@
       </div>
     </footer>
   </section>
-  <!--/ Section Contact-footer End /-->
+  <!--Contact Footer-->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <div id="preloader"></div>
